--- a/series/index.html
+++ b/series/index.html
@@ -11,7 +11,7 @@
 <link rel=canonical href=https://srcio.cn/series/>
 <meta name=baidu-site-verification content="code-yW1u8Rg4sz">
 <meta name=google-site-verification content="qnXhMaPNdhaZ4A36ptMVUn-0o111dAsJqugH_0ZCYvM">
-<link crossorigin=anonymous href=/assets/css/stylesheet.0e3184b9237efa065c146762ccb8b17e5699dd8a4bae3c8e3fefecf77662ef2e.css integrity="sha256-DjGEuSN++gZcFGdizLixflaZ3YpLrjyOP+/s93Zi7y4=" rel="preload stylesheet" as=style>
+<link crossorigin=anonymous href=/assets/css/stylesheet.bef2436eea310729b90d59da3c218bbba4ac673f8d2f0d852666a99c28eddc12.css integrity="sha256-vvJDbuoxBym5DVnaPCGLu6SsZz+NLw2FJmapnCjt3BI=" rel="preload stylesheet" as=style>
 <link rel=icon href=https://srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=16x16 href=https://srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=32x32 href=https://srcio.cn/images/blog.png>
@@ -50,43 +50,45 @@
 <li>
 <a href=https://srcio.cn/ title=主页>
 <span>
-<i class=fi>6</i>&nbsp;主页</span>
+<i class="fi fi-home"></i>&nbsp;主页</span>
 </a>
 </li>
 <li>
 <a href=https://srcio.cn/posts/ title=文章>
 <span>
-<i class=fi>7</i>&nbsp;文章</span>
+<i class="fi fi-book"></i>&nbsp;文章</span>
 </a>
 </li>
 <li>
 <a href=https://srcio.cn/series/ title=系列>
 <span class=active>
-<i class=fi>5</i>&nbsp;系列</span>
+<i class="fi fi-books"></i>&nbsp;系列</span>
 </a>
 </li>
 <li>
 <a href=https://srcio.cn/tags/ title=标签>
 <span>
-<i class=fi>#</i>&nbsp;标签</span>
+<i class="fi fi-tags"></i>&nbsp;标签</span>
 </a>
 </li>
 <li>
 <a href=https://srcio.cn/archives/ title=归档>
 <span>
-<i class=fi>4</i>&nbsp;归档</span>
+<i class="fi fi-folder"></i>&nbsp;归档</span>
 </a>
 </li>
 <li>
 <a href=https://srcio.cn/search/ title>
 <span>
-<i class=fi>!</i>&nbsp;</span>
+<i class="fi fi-search"></i>&nbsp;</span>
 </a>
 </li>
 </ul>
 </nav>
 </header><main class=main>
-<header class=page-header><div class=breadcrumbs><p><a href=/>主页</a>&nbsp;<span><i class="fi fi-angle-right-solid">'</i>&nbsp;系列</span></p>
+<header class=page-header><div class=breadcrumbs><p>
+<span><a href=/>主页</a></span><span><i class="fi fi-angle-right"></i>系列</span>
+</p>
 </div>
 </header>
 <article class=post-entry>
@@ -99,13 +101,13 @@
 </div>
 <footer class=entry-footer><span class=meta-item>
 <span>
-<i class="fi fi-calendar-day-solid">/</i>
+<i class="fi fi-calendar"></i>
 2022-9-28
 </span>
 </span>
 <span class=meta-item>
 <span>
-&nbsp;·&nbsp;&nbsp;<i class="fi fi-user-solid">9</i>&nbsp;丁鹏
+&nbsp;·&nbsp;<i class="fi fi-user"></i>丁鹏
 </span>
 </span></footer>
 <a class=entry-link aria-label="post link to Kubernetes 编程" href=https://srcio.cn/series/programming-kubernetes/></a>
@@ -120,13 +122,13 @@
 </div>
 <footer class=entry-footer><span class=meta-item>
 <span>
-<i class="fi fi-calendar-day-solid">/</i>
+<i class="fi fi-calendar"></i>
 2022-9-28
 </span>
 </span>
 <span class=meta-item>
 <span>
-&nbsp;·&nbsp;&nbsp;<i class="fi fi-user-solid">9</i>&nbsp;丁鹏
+&nbsp;·&nbsp;<i class="fi fi-user"></i>丁鹏
 </span>
 </span></footer>
 <a class=entry-link aria-label="post link to Golang 编程" href=https://srcio.cn/series/programming-go/></a>
@@ -136,20 +138,17 @@
 <footer class=footer>
 <p>
 <span>
-<i class="fi fi-copyright-solid">+</i>
-2022
+<i class="fi fi-copyright"></i>2022
 <a href=https://srcio.cn/>博客 · 丁鹏</a>
 </span>
 &nbsp;|&nbsp;
 <span>
-<i class="fi fi-shield-solid">,</i>
-<a href=https://beian.miit.gov.cn/>湘ICP备2022019990号</a>
+<a href=https://beian.miit.gov.cn/><i class="fi fi-shield"></i>湘ICP备2022019990号</a>
 </span>
 </p>
 <p>
 <span>
-<i class="fi fi-fire-solid">)</i>
-本站共计
+<i class="fi fi-fire"></i>本站共计
 <a id=busuanzi_value_site_pv>0</a> 次访问 & <a id=busuanzi_value_site_uv>0</a> 位访客
 </span>
 </p>
