--- a/series/programming-kubernetes/crd/index.html
+++ b/series/programming-kubernetes/crd/index.html
@@ -12,7 +12,7 @@ apiVersion:apiextensions.k8s.io/v1beta1kind:CustomResourceDefinitionmetadata:nam
 <link rel=canonical href=https://srcio.cn/series/programming-kubernetes/crd/>
 <meta name=baidu-site-verification content="code-yW1u8Rg4sz">
 <meta name=google-site-verification content="qnXhMaPNdhaZ4A36ptMVUn-0o111dAsJqugH_0ZCYvM">
-<link crossorigin=anonymous href=/assets/css/stylesheet.0e3184b9237efa065c146762ccb8b17e5699dd8a4bae3c8e3fefecf77662ef2e.css integrity="sha256-DjGEuSN++gZcFGdizLixflaZ3YpLrjyOP+/s93Zi7y4=" rel="preload stylesheet" as=style>
+<link crossorigin=anonymous href=/assets/css/stylesheet.bef2436eea310729b90d59da3c218bbba4ac673f8d2f0d852666a99c28eddc12.css integrity="sha256-vvJDbuoxBym5DVnaPCGLu6SsZz+NLw2FJmapnCjt3BI=" rel="preload stylesheet" as=style>
 <script defer crossorigin=anonymous src=/assets/js/highlight.f413e19d0714851f6474e7ee9632408e58ac146fbdbe62747134bea2fa3415e0.js integrity="sha256-9BPhnQcUhR9kdOfuljJAjlisFG+9vmJ0cTS+ovo0FeA=" onload=hljs.initHighlightingOnLoad()></script>
 <link rel=icon href=https://srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=16x16 href=https://srcio.cn/images/blog.png>
@@ -56,37 +56,37 @@ apiVersion:apiextensions.k8s.io/v1beta1kind:CustomResourceDefinitionmetadata:nam
 <li>
 <a href=https://srcio.cn/ title=主页>
 <span>
-<i class=fi>6</i>&nbsp;主页</span>
+<i class="fi fi-home"></i>&nbsp;主页</span>
 </a>
 </li>
 <li>
 <a href=https://srcio.cn/posts/ title=文章>
 <span>
-<i class=fi>7</i>&nbsp;文章</span>
+<i class="fi fi-book"></i>&nbsp;文章</span>
 </a>
 </li>
 <li>
 <a href=https://srcio.cn/series/ title=系列>
 <span>
-<i class=fi>5</i>&nbsp;系列</span>
+<i class="fi fi-books"></i>&nbsp;系列</span>
 </a>
 </li>
 <li>
 <a href=https://srcio.cn/tags/ title=标签>
 <span>
-<i class=fi>#</i>&nbsp;标签</span>
+<i class="fi fi-tags"></i>&nbsp;标签</span>
 </a>
 </li>
 <li>
 <a href=https://srcio.cn/archives/ title=归档>
 <span>
-<i class=fi>4</i>&nbsp;归档</span>
+<i class="fi fi-folder"></i>&nbsp;归档</span>
 </a>
 </li>
 <li>
 <a href=https://srcio.cn/search/ title>
 <span>
-<i class=fi>!</i>&nbsp;</span>
+<i class="fi fi-search"></i>&nbsp;</span>
 </a>
 </li>
 </ul>
@@ -95,33 +95,33 @@ apiVersion:apiextensions.k8s.io/v1beta1kind:CustomResourceDefinitionmetadata:nam
 <article class=post-single>
 <div class=post-left-article>
 <header class=post-header>
-<div class=breadcrumbs><p><a href=/>主页</a>
-<a href=https://srcio.cn/series/><i class="fi fi-angle-right-solid">'</i>&nbsp;系列</a>
-<a href=https://srcio.cn/series/programming-kubernetes/><i class="fi fi-angle-right-solid">'</i>&nbsp;Kubernetes 编程</a>&nbsp;<span><i class="fi fi-angle-right-solid">'</i>&nbsp;CRD 简介</span></p>
+<div class=breadcrumbs><p>
+<span><a href=/>主页</a></span><span><a href=https://srcio.cn/series/><i class="fi fi-angle-right"></i>系列</a></span><span><a href=https://srcio.cn/series/programming-kubernetes/><i class="fi fi-angle-right"></i>Kubernetes 编程</a></span><span><i class="fi fi-angle-right"></i>CRD 简介</span>
+</p>
 </div>
 <h1 id=post-title class=post-title>
 CRD 简介
 </h1>
 <div class=post-meta><span class=meta-item>
 <span>
-<i class="fi fi-calendar-day-solid">/</i>
+<i class="fi fi-calendar"></i>
 2022-10-11
 </span>
 </span><span class=meta-item>
 <span>
-&nbsp;·&nbsp;&nbsp;<i class="fi fi-clock-solid">.</i>&nbsp;1 分钟</span>
+&nbsp;·&nbsp;<i class="fi fi-clock"></i>1 分钟</span>
 </span><span class=meta-item>
 <span>
-&nbsp;·&nbsp;&nbsp;<i class="fi fi-chart-simple-solid">-</i>&nbsp;18 字</span>
+&nbsp;·&nbsp;<i class="fi fi-chart"></i>18 字</span>
 </span>
 <span class=meta-item>
 <span>
-&nbsp;·&nbsp;&nbsp;<i class="fi fi-user-solid">9</i>&nbsp;丁鹏
+&nbsp;·&nbsp;<i class="fi fi-user"></i>丁鹏
 </span>
 </span><span class=meta-item>
-&nbsp;·&nbsp;&nbsp;<i class="fi fi-book-open-reader-solid">0</i>&nbsp;<span id=busuanzi_value_page_pv></span>
-</span>&nbsp;&nbsp;|&nbsp;&nbsp;<a href=https://github.com/srcio/blog/edit/master/content/series/programming-kubernetes/crd.md rel="noopener noreferrer" target=_blank>
-<i class="fi fi-pen-to-square-regular">8</i>&nbsp;编辑</a>
+&nbsp;·&nbsp;<i class="fi fi-reader"></i>&nbsp;<span id=busuanzi_value_page_pv></span>
+</span>&nbsp;|&nbsp;<a href=https://github.com/srcio/blog/edit/master/content/series/programming-kubernetes/crd.md rel="noopener noreferrer" target=_blank>
+<i class="fi fi-edit"></i>&nbsp;编辑</a>
 </div>
 </header>
 <div class=post-content><p>CRD 字段校验配置</p>
@@ -186,15 +186,15 @@ CRD 简介
 </div>
 <footer class=post-footer>
 <ul class=post-tags>
-<li><a href=https://srcio.cn/tags/kubernetes/><i class="fi fi-tag-solid">"</i>&nbsp;Kubernetes</a></li>
-<li><a href=https://srcio.cn/tags/crd/><i class="fi fi-tag-solid">"</i>&nbsp;crd</a></li>
+<li><a href=https://srcio.cn/tags/kubernetes/><i class="fi fi-tag"></i>&nbsp;Kubernetes</a></li>
+<li><a href=https://srcio.cn/tags/crd/><i class="fi fi-tag"></i>&nbsp;crd</a></li>
 </ul>
 <nav class=paginav>
 <a class=prev href=https://srcio.cn/posts/kubelet-recycle-policy/>
-<strong class=title><i class="fi fi-backward-solid">&</i>&nbsp;上一页</strong>
+<strong class=title><i class="fi fi-backward"></i>&nbsp;上一页</strong>
 <br>Kubelet 垃圾回收原理剖析</a>
 <a class=next href=https://srcio.cn/series/programming-go/slice-append/>
-<strong class=title>下一页&nbsp;<i class="fi fi-forward-solid">(</i></strong>
+<strong class=title>下一页&nbsp;<i class="fi fi-forward"></i></strong>
 <br>Golang 切片扩容</a>
 </nav>
 </footer>
@@ -211,20 +211,17 @@ CRD 简介
 <footer class=footer>
 <p>
 <span>
-<i class="fi fi-copyright-solid">+</i>
-2022
+<i class="fi fi-copyright"></i>2022
 <a href=https://srcio.cn/>博客 · 丁鹏</a>
 </span>
 &nbsp;|&nbsp;
 <span>
-<i class="fi fi-shield-solid">,</i>
-<a href=https://beian.miit.gov.cn/>湘ICP备2022019990号</a>
+<a href=https://beian.miit.gov.cn/><i class="fi fi-shield"></i>湘ICP备2022019990号</a>
 </span>
 </p>
 <p>
 <span>
-<i class="fi fi-fire-solid">)</i>
-本站共计
+<i class="fi fi-fire"></i>本站共计
 <a id=busuanzi_value_site_pv>0</a> 次访问 & <a id=busuanzi_value_site_uv>0</a> 位访客
 </span>
 </p>
@@ -234,5 +231,5 @@ CRD 简介
 <script>let menu=document.getElementById('menu');menu&&(menu.scrollLeft=localStorage.getItem("menu-scroll-position"),menu.onscroll=function(){localStorage.setItem("menu-scroll-position",menu.scrollLeft)}),document.querySelectorAll('a[href^="#"]').forEach(a=>{a.addEventListener("click",function(b){b.preventDefault();var a=this.getAttribute("href").substr(1);window.matchMedia('(prefers-reduced-motion: reduce)').matches?document.querySelector(`[id='${decodeURIComponent(a)}']`).scrollIntoView():document.querySelector(`[id='${decodeURIComponent(a)}']`).scrollIntoView({behavior:"smooth"}),a==="top"?history.replaceState(null,null," "):history.pushState(null,null,`#${a}`)})})</script>
 <script>var mybutton=document.getElementById("top-link");window.onscroll=function(){document.body.scrollTop>800||document.documentElement.scrollTop>800?(mybutton.style.visibility="visible",mybutton.style.opacity="1"):(mybutton.style.visibility="hidden",mybutton.style.opacity="0")}</script>
 <script>document.getElementById("theme-toggle").addEventListener("click",()=>{document.body.className.includes("dark")?(document.body.classList.remove('dark'),localStorage.setItem("pref-theme",'light')):(document.body.classList.add('dark'),localStorage.setItem("pref-theme",'dark'))})</script>
-<script>document.querySelectorAll('pre > code').forEach(b=>{const c=b.parentNode.parentNode,a=document.createElement('button');a.classList.add('copy-code'),a.innerHTML='<i class="fi fi-clone-regular">&#x2a;</i>';function d(){a.innerHTML='<i class="fi fi-check-solid">&#x32;</i>',setTimeout(()=>{a.innerHTML='<i class="fi fi-clone-regular">&#x2a;</i>'},2e3)}a.addEventListener('click',e=>{if('clipboard'in navigator){navigator.clipboard.writeText(b.textContent),d();return}const a=document.createRange();a.selectNodeContents(b);const c=window.getSelection();c.removeAllRanges(),c.addRange(a);try{document.execCommand('copy'),d()}catch(a){}c.removeRange(a)}),c.classList.contains("highlight")?c.appendChild(a):c.parentNode.firstChild==c||(b.parentNode.parentNode.parentNode.parentNode.parentNode.nodeName=="TABLE"?b.parentNode.parentNode.parentNode.parentNode.parentNode.appendChild(a):b.parentNode.appendChild(a))})</script></body>
+<script>document.querySelectorAll('pre > code').forEach(b=>{const c=b.parentNode.parentNode,a=document.createElement('button');a.classList.add('copy-code'),a.innerHTML='<i class="fi fi-copy"></i>';function d(){a.innerHTML='<i class="fi fi-check"></i>',setTimeout(()=>{a.innerHTML='<i class="fi fi-copy"></i>'},2e3)}a.addEventListener('click',e=>{if('clipboard'in navigator){navigator.clipboard.writeText(b.textContent),d();return}const a=document.createRange();a.selectNodeContents(b);const c=window.getSelection();c.removeAllRanges(),c.addRange(a);try{document.execCommand('copy'),d()}catch(a){}c.removeRange(a)}),c.classList.contains("highlight")?c.appendChild(a):c.parentNode.firstChild==c||(b.parentNode.parentNode.parentNode.parentNode.parentNode.nodeName=="TABLE"?b.parentNode.parentNode.parentNode.parentNode.parentNode.appendChild(a):b.parentNode.appendChild(a))})</script></body>
 </html>
