deploy: bff4e703ee66540a5f6af17253fe5262601a14d5

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link rel=canonical href=https://srcio.cn/>
 <meta name=baidu-site-verification content="code-yW1u8Rg4sz">
 <meta name=google-site-verification content="qnXhMaPNdhaZ4A36ptMVUn-0o111dAsJqugH_0ZCYvM">
-<link crossorigin=anonymous href=/assets/css/stylesheet.bef2436eea310729b90d59da3c218bbba4ac673f8d2f0d852666a99c28eddc12.css integrity="sha256-vvJDbuoxBym5DVnaPCGLu6SsZz+NLw2FJmapnCjt3BI=" rel="preload stylesheet" as=style>
+<link crossorigin=anonymous href=/assets/css/stylesheet.595134822be66a32ae1b1e14993b4adc68c5422f33bc7403aef30b553bdda2f2.css integrity="sha256-WVE0givmajKuGx4UmTtK3GjFQi8zvHQDrvMLVTvdovI=" rel="preload stylesheet" as=style>
 <link rel=icon href=https://srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=16x16 href=https://srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=32x32 href=https://srcio.cn/images/blog.png>
@@ -50,12 +50,6 @@
 </div>
 <ul id=menu>
 <li>
-<a href=https://srcio.cn/ title=主页>
-<span class=active>
-<i class="fi fi-home"></i>&nbsp;主页</span>
-</a>
-</li>
-<li>
 <a href=https://srcio.cn/posts/ title=文章>
 <span>
 <i class="fi fi-book"></i>&nbsp;文章</span>
@@ -64,7 +58,7 @@
 <li>
 <a href=https://srcio.cn/series/ title=系列>
 <span>
-<i class="fi fi-books"></i>&nbsp;系列</span>
+<i class="fi fi-series"></i>&nbsp;系列</span>
 </a>
 </li>
 <li>
@@ -80,9 +74,10 @@
 </a>
 </li>
 <li>
-<a href=https://srcio.cn/search/ title>
+<a href=/search title="Alt + /" accesskey=/>
 <span>
-<i class="fi fi-search"></i>&nbsp;</span>
+<i class="fi fi-search"></i>
+</span>
 </a>
 </li>
 </ul>
@@ -103,6 +98,32 @@
 </article>
 <article class=post-entry>
 <header class=entry-header>
+<h2>Go 错误处理
+</h2>
+</header>
+<div class=entry-content>
+<p>errors 包为你的 Go 程序提供一种对程序员调试、查看日志更友好的错误处理方式。 Go 程序中传统的错误处理方法： if err != nil { return err } 递归的向上传递错误，这种方式...</p>
+</div>
+<footer class=entry-footer><span class=meta-item>
+<span>
+<i class="fi fi-calendar"></i>2022-10-19
+</span>
+</span><span class=meta-item>
+<span>
+&nbsp;·&nbsp;<i class="fi fi-clock"></i>1 分钟</span>
+</span><span class=meta-item>
+<span>
+&nbsp;·&nbsp;<i class="fi fi-word"></i>362 字</span>
+</span>
+<span class=meta-item>
+<span>
+&nbsp;·&nbsp;<i class="fi fi-user"></i>丁鹏
+</span>
+</span></footer>
+<a class=entry-link aria-label="post link to Go 错误处理" href=https://srcio.cn/series/programming-go/gopkg-errors/></a>
+</article>
+<article class=post-entry>
+<header class=entry-header>
 <h2>数组递归构造具有父子层级关系的对象
 </h2>
 </header>
@@ -111,15 +132,14 @@
 </div>
 <footer class=entry-footer><span class=meta-item>
 <span>
-<i class="fi fi-calendar"></i>
-2022-10-18
+<i class="fi fi-calendar"></i>2022-10-18
 </span>
 </span><span class=meta-item>
 <span>
 &nbsp;·&nbsp;<i class="fi fi-clock"></i>2 分钟</span>
 </span><span class=meta-item>
 <span>
-&nbsp;·&nbsp;<i class="fi fi-chart"></i>879 字</span>
+&nbsp;·&nbsp;<i class="fi fi-word"></i>879 字</span>
 </span>
 <span class=meta-item>
 <span>
@@ -138,15 +158,14 @@
 </div>
 <footer class=entry-footer><span class=meta-item>
 <span>
-<i class="fi fi-calendar"></i>
-2022-10-17
+<i class="fi fi-calendar"></i>2022-10-17
 </span>
 </span><span class=meta-item>
 <span>
 &nbsp;·&nbsp;<i class="fi fi-clock"></i>10 分钟</span>
 </span><span class=meta-item>
 <span>
-&nbsp;·&nbsp;<i class="fi fi-chart"></i>4839 字</span>
+&nbsp;·&nbsp;<i class="fi fi-word"></i>4839 字</span>
 </span>
 <span class=meta-item>
 <span>
@@ -165,15 +184,14 @@
 </div>
 <footer class=entry-footer><span class=meta-item>
 <span>
-<i class="fi fi-calendar"></i>
-2022-10-17
+<i class="fi fi-calendar"></i>2022-10-17
 </span>
 </span><span class=meta-item>
 <span>
 &nbsp;·&nbsp;<i class="fi fi-clock"></i>9 分钟</span>
 </span><span class=meta-item>
 <span>
-&nbsp;·&nbsp;<i class="fi fi-chart"></i>4351 字</span>
+&nbsp;·&nbsp;<i class="fi fi-word"></i>4351 字</span>
 </span>
 <span class=meta-item>
 <span>
@@ -192,15 +210,14 @@
 </div>
 <footer class=entry-footer><span class=meta-item>
 <span>
-<i class="fi fi-calendar"></i>
-2022-10-11
+<i class="fi fi-calendar"></i>2022-10-11
 </span>
 </span><span class=meta-item>
 <span>
 &nbsp;·&nbsp;<i class="fi fi-clock"></i>1 分钟</span>
 </span><span class=meta-item>
 <span>
-&nbsp;·&nbsp;<i class="fi fi-chart"></i>37 字</span>
+&nbsp;·&nbsp;<i class="fi fi-word"></i>37 字</span>
 </span>
 <span class=meta-item>
 <span>
@@ -219,15 +236,14 @@
 </div>
 <footer class=entry-footer><span class=meta-item>
 <span>
-<i class="fi fi-calendar"></i>
-2022-10-11
+<i class="fi fi-calendar"></i>2022-10-11
 </span>
 </span><span class=meta-item>
 <span>
 &nbsp;·&nbsp;<i class="fi fi-clock"></i>1 分钟</span>
 </span><span class=meta-item>
 <span>
-&nbsp;·&nbsp;<i class="fi fi-chart"></i>91 字</span>
+&nbsp;·&nbsp;<i class="fi fi-word"></i>91 字</span>
 </span>
 <span class=meta-item>
 <span>
@@ -246,15 +262,14 @@
 </div>
 <footer class=entry-footer><span class=meta-item>
 <span>
-<i class="fi fi-calendar"></i>
-2022-10-10
+<i class="fi fi-calendar"></i>2022-10-10
 </span>
 </span><span class=meta-item>
 <span>
 &nbsp;·&nbsp;<i class="fi fi-clock"></i>1 分钟</span>
 </span><span class=meta-item>
 <span>
-&nbsp;·&nbsp;<i class="fi fi-chart"></i>390 字</span>
+&nbsp;·&nbsp;<i class="fi fi-word"></i>390 字</span>
 </span>
 <span class=meta-item>
 <span>
@@ -273,15 +288,14 @@
 </div>
 <footer class=entry-footer><span class=meta-item>
 <span>
-<i class="fi fi-calendar"></i>
-2022-10-8
+<i class="fi fi-calendar"></i>2022-10-8
 </span>
 </span><span class=meta-item>
 <span>
 &nbsp;·&nbsp;<i class="fi fi-clock"></i>2 分钟</span>
 </span><span class=meta-item>
 <span>
-&nbsp;·&nbsp;<i class="fi fi-chart"></i>503 字</span>
+&nbsp;·&nbsp;<i class="fi fi-word"></i>503 字</span>
 </span>
 <span class=meta-item>
 <span>
@@ -300,15 +314,14 @@
 </div>
 <footer class=entry-footer><span class=meta-item>
 <span>
-<i class="fi fi-calendar"></i>
-2022-10-2
+<i class="fi fi-calendar"></i>2022-10-2
 </span>
 </span><span class=meta-item>
 <span>
 &nbsp;·&nbsp;<i class="fi fi-clock"></i>3 分钟</span>
 </span><span class=meta-item>
 <span>
-&nbsp;·&nbsp;<i class="fi fi-chart"></i>1004 字</span>
+&nbsp;·&nbsp;<i class="fi fi-word"></i>1004 字</span>
 </span>
 <span class=meta-item>
 <span>
@@ -327,15 +340,14 @@
 </div>
 <footer class=entry-footer><span class=meta-item>
 <span>
-<i class="fi fi-calendar"></i>
-2022-10-1
+<i class="fi fi-calendar"></i>2022-10-1
 </span>
 </span><span class=meta-item>
 <span>
 &nbsp;·&nbsp;<i class="fi fi-clock"></i>1 分钟</span>
 </span><span class=meta-item>
 <span>
-&nbsp;·&nbsp;<i class="fi fi-chart"></i>470 字</span>
+&nbsp;·&nbsp;<i class="fi fi-word"></i>470 字</span>
 </span>
 <span class=meta-item>
 <span>
@@ -343,33 +355,6 @@
 </span>
 </span></footer>
 <a class=entry-link aria-label="post link to 构造 rest.Config 实例" href=https://srcio.cn/series/programming-kubernetes/rest-config/></a>
-</article>
-<article class=post-entry>
-<header class=entry-header>
-<h2>Go1.18 - 工作区模式
-</h2>
-</header>
-<div class=entry-content>
-<p>安装的 Go1.18 或更新版本，它为你提供了工作区模式（Workspace mode），帮助你更好做 go 模块之间依赖的管理。 例如，你开发一个新项目，分了两个...</p>
-</div>
-<footer class=entry-footer><span class=meta-item>
-<span>
-<i class="fi fi-calendar"></i>
-2022-9-28
-</span>
-</span><span class=meta-item>
-<span>
-&nbsp;·&nbsp;<i class="fi fi-clock"></i>2 分钟</span>
-</span><span class=meta-item>
-<span>
-&nbsp;·&nbsp;<i class="fi fi-chart"></i>612 字</span>
-</span>
-<span class=meta-item>
-<span>
-&nbsp;·&nbsp;<i class="fi fi-user"></i>丁鹏
-</span>
-</span></footer>
-<a class=entry-link aria-label="post link to Go1.18 - 工作区模式" href=https://srcio.cn/series/programming-go/go-work/></a>
 </article>
 <footer class=page-footer>
 <nav class=pagination>
