--- a/series/index.html
+++ b/series/index.html
@@ -11,7 +11,7 @@
 <link rel=canonical href=https://srcio.cn/series/>
 <meta name=baidu-site-verification content="code-yW1u8Rg4sz">
 <meta name=google-site-verification content="qnXhMaPNdhaZ4A36ptMVUn-0o111dAsJqugH_0ZCYvM">
-<link crossorigin=anonymous href=/assets/css/stylesheet.bef2436eea310729b90d59da3c218bbba4ac673f8d2f0d852666a99c28eddc12.css integrity="sha256-vvJDbuoxBym5DVnaPCGLu6SsZz+NLw2FJmapnCjt3BI=" rel="preload stylesheet" as=style>
+<link crossorigin=anonymous href=/assets/css/stylesheet.595134822be66a32ae1b1e14993b4adc68c5422f33bc7403aef30b553bdda2f2.css integrity="sha256-WVE0givmajKuGx4UmTtK3GjFQi8zvHQDrvMLVTvdovI=" rel="preload stylesheet" as=style>
 <link rel=icon href=https://srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=16x16 href=https://srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=32x32 href=https://srcio.cn/images/blog.png>
@@ -48,12 +48,6 @@
 </div>
 <ul id=menu>
 <li>
-<a href=https://srcio.cn/ title=主页>
-<span>
-<i class="fi fi-home"></i>&nbsp;主页</span>
-</a>
-</li>
-<li>
 <a href=https://srcio.cn/posts/ title=文章>
 <span>
 <i class="fi fi-book"></i>&nbsp;文章</span>
@@ -62,7 +56,7 @@
 <li>
 <a href=https://srcio.cn/series/ title=系列>
 <span class=active>
-<i class="fi fi-books"></i>&nbsp;系列</span>
+<i class="fi fi-series"></i>&nbsp;系列</span>
 </a>
 </li>
 <li>
@@ -78,16 +72,17 @@
 </a>
 </li>
 <li>
-<a href=https://srcio.cn/search/ title>
+<a href=/search title="Alt + /" accesskey=/>
 <span>
-<i class="fi fi-search"></i>&nbsp;</span>
+<i class="fi fi-search"></i>
+</span>
 </a>
 </li>
 </ul>
 </nav>
 </header><main class=main>
 <header class=page-header><div class=breadcrumbs><p>
-<span><a href=/>主页</a></span><span><i class="fi fi-angle-right"></i>系列</span>
+<span><a href=/><i class="fi fi-home"></i>&nbsp;主页</a></span><span><i class="fi fi-angle-right"></i>系列</span>
 </p>
 </div>
 </header>
@@ -101,8 +96,7 @@
 </div>
 <footer class=entry-footer><span class=meta-item>
 <span>
-<i class="fi fi-calendar"></i>
-2022-9-28
+<i class="fi fi-calendar"></i>2022-9-28
 </span>
 </span>
 <span class=meta-item>
@@ -122,8 +116,7 @@
 </div>
 <footer class=entry-footer><span class=meta-item>
 <span>
-<i class="fi fi-calendar"></i>
-2022-9-28
+<i class="fi fi-calendar"></i>2022-9-28
 </span>
 </span>
 <span class=meta-item>
