--- a/series/programming-go/menu-recursive/index.html
+++ b/series/programming-go/menu-recursive/index.html
@@ -11,7 +11,7 @@
 <link rel=canonical href=https://srcio.cn/series/programming-go/menu-recursive/>
 <meta name=baidu-site-verification content="code-yW1u8Rg4sz">
 <meta name=google-site-verification content="qnXhMaPNdhaZ4A36ptMVUn-0o111dAsJqugH_0ZCYvM">
-<link crossorigin=anonymous href=/assets/css/stylesheet.bef2436eea310729b90d59da3c218bbba4ac673f8d2f0d852666a99c28eddc12.css integrity="sha256-vvJDbuoxBym5DVnaPCGLu6SsZz+NLw2FJmapnCjt3BI=" rel="preload stylesheet" as=style>
+<link crossorigin=anonymous href=/assets/css/stylesheet.595134822be66a32ae1b1e14993b4adc68c5422f33bc7403aef30b553bdda2f2.css integrity="sha256-WVE0givmajKuGx4UmTtK3GjFQi8zvHQDrvMLVTvdovI=" rel="preload stylesheet" as=style>
 <script defer crossorigin=anonymous src=/assets/js/highlight.f413e19d0714851f6474e7ee9632408e58ac146fbdbe62747134bea2fa3415e0.js integrity="sha256-9BPhnQcUhR9kdOfuljJAjlisFG+9vmJ0cTS+ovo0FeA=" onload=hljs.initHighlightingOnLoad()></script>
 <link rel=icon href=https://srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=16x16 href=https://srcio.cn/images/blog.png>
@@ -51,12 +51,6 @@
 </div>
 <ul id=menu>
 <li>
-<a href=https://srcio.cn/ title=主页>
-<span>
-<i class="fi fi-home"></i>&nbsp;主页</span>
-</a>
-</li>
-<li>
 <a href=https://srcio.cn/posts/ title=文章>
 <span>
 <i class="fi fi-book"></i>&nbsp;文章</span>
@@ -65,7 +59,7 @@
 <li>
 <a href=https://srcio.cn/series/ title=系列>
 <span>
-<i class="fi fi-books"></i>&nbsp;系列</span>
+<i class="fi fi-series"></i>&nbsp;系列</span>
 </a>
 </li>
 <li>
@@ -81,9 +75,10 @@
 </a>
 </li>
 <li>
-<a href=https://srcio.cn/search/ title>
+<a href=/search title="Alt + /" accesskey=/>
 <span>
-<i class="fi fi-search"></i>&nbsp;</span>
+<i class="fi fi-search"></i>
+</span>
 </a>
 </li>
 </ul>
@@ -93,7 +88,7 @@
 <div class=post-left-article>
 <header class=post-header>
 <div class=breadcrumbs><p>
-<span><a href=/>主页</a></span><span><a href=https://srcio.cn/series/><i class="fi fi-angle-right"></i>系列</a></span><span><a href=https://srcio.cn/series/programming-go/><i class="fi fi-angle-right"></i>Golang 编程</a></span><span><i class="fi fi-angle-right"></i>数组递归构造具有父子层级关系的对象</span>
+<span><a href=/><i class="fi fi-home"></i>&nbsp;主页</a></span><span><a href=https://srcio.cn/series/><i class="fi fi-angle-right"></i>系列</a></span><span><a href=https://srcio.cn/series/programming-go/><i class="fi fi-angle-right"></i>Golang 编程</a></span><span><i class="fi fi-angle-right"></i>数组递归构造具有父子层级关系的对象</span>
 </p>
 </div>
 <h1 id=post-title class=post-title>
@@ -101,22 +96,21 @@
 </h1>
 <div class=post-meta><span class=meta-item>
 <span>
-<i class="fi fi-calendar"></i>
-2022-10-18
+<i class="fi fi-calendar"></i>2022-10-18
 </span>
 </span><span class=meta-item>
 <span>
 &nbsp;·&nbsp;<i class="fi fi-clock"></i>2 分钟</span>
 </span><span class=meta-item>
 <span>
-&nbsp;·&nbsp;<i class="fi fi-chart"></i>879 字</span>
+&nbsp;·&nbsp;<i class="fi fi-word"></i>879 字</span>
 </span>
 <span class=meta-item>
 <span>
 &nbsp;·&nbsp;<i class="fi fi-user"></i>丁鹏
 </span>
 </span><span class=meta-item>
-&nbsp;·&nbsp;<i class="fi fi-reader"></i>&nbsp;<span id=busuanzi_value_page_pv></span>
+&nbsp;·&nbsp;<i class="fi fi-eye"></i>&nbsp;<span id=busuanzi_value_page_pv></span>
 </span>&nbsp;|&nbsp;<a href=https://github.com/srcio/blog/edit/master/content/series/programming-go/menu-recursive.md rel="noopener noreferrer" target=_blank>
 <i class="fi fi-edit"></i>&nbsp;编辑</a>
 </div>
@@ -255,6 +249,9 @@
 <li><a href=https://srcio.cn/tags/golang/><i class="fi fi-tag"></i>&nbsp;Golang</a></li>
 </ul>
 <nav class=paginav>
+<a class=prev href=https://srcio.cn/series/programming-go/gopkg-errors/>
+<strong class=title><i class="fi fi-backward"></i>&nbsp;上一页</strong>
+<br>Go 错误处理</a>
 <a class=next href=https://srcio.cn/posts/k8s-node-resource-config/>
 <strong class=title>下一页&nbsp;<i class="fi fi-forward"></i></strong>
 <br>K8s 集群规划之节点资源配置</a>
