--- a/series/programming-kubernetes/index.html
+++ b/series/programming-kubernetes/index.html
@@ -11,7 +11,7 @@
 <link rel=canonical href=https://srcio.cn/series/programming-kubernetes/>
 <meta name=baidu-site-verification content="code-yW1u8Rg4sz">
 <meta name=google-site-verification content="qnXhMaPNdhaZ4A36ptMVUn-0o111dAsJqugH_0ZCYvM">
-<link crossorigin=anonymous href=/assets/css/stylesheet.bef2436eea310729b90d59da3c218bbba4ac673f8d2f0d852666a99c28eddc12.css integrity="sha256-vvJDbuoxBym5DVnaPCGLu6SsZz+NLw2FJmapnCjt3BI=" rel="preload stylesheet" as=style>
+<link crossorigin=anonymous href=/assets/css/stylesheet.595134822be66a32ae1b1e14993b4adc68c5422f33bc7403aef30b553bdda2f2.css integrity="sha256-WVE0givmajKuGx4UmTtK3GjFQi8zvHQDrvMLVTvdovI=" rel="preload stylesheet" as=style>
 <link rel=icon href=https://srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=16x16 href=https://srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=32x32 href=https://srcio.cn/images/blog.png>
@@ -48,12 +48,6 @@
 </div>
 <ul id=menu>
 <li>
-<a href=https://srcio.cn/ title=主页>
-<span>
-<i class="fi fi-home"></i>&nbsp;主页</span>
-</a>
-</li>
-<li>
 <a href=https://srcio.cn/posts/ title=文章>
 <span>
 <i class="fi fi-book"></i>&nbsp;文章</span>
@@ -62,7 +56,7 @@
 <li>
 <a href=https://srcio.cn/series/ title=系列>
 <span>
-<i class="fi fi-books"></i>&nbsp;系列</span>
+<i class="fi fi-series"></i>&nbsp;系列</span>
 </a>
 </li>
 <li>
@@ -78,16 +72,17 @@
 </a>
 </li>
 <li>
-<a href=https://srcio.cn/search/ title>
+<a href=/search title="Alt + /" accesskey=/>
 <span>
-<i class="fi fi-search"></i>&nbsp;</span>
+<i class="fi fi-search"></i>
+</span>
 </a>
 </li>
 </ul>
 </nav>
 </header><main class=main>
 <header class=page-header><div class=breadcrumbs><p>
-<span><a href=/>主页</a></span><span><a href=https://srcio.cn/series/><i class="fi fi-angle-right"></i>系列</a></span><span><i class="fi fi-angle-right"></i>Kubernetes 编程</span>
+<span><a href=/><i class="fi fi-home"></i>&nbsp;主页</a></span><span><a href=https://srcio.cn/series/><i class="fi fi-angle-right"></i>系列</a></span><span><i class="fi fi-angle-right"></i>Kubernetes 编程</span>
 </p>
 </div>
 </header>
@@ -101,15 +96,14 @@
 </div>
 <footer class=entry-footer><span class=meta-item>
 <span>
-<i class="fi fi-calendar"></i>
-2022-10-11
+<i class="fi fi-calendar"></i>2022-10-11
 </span>
 </span><span class=meta-item>
 <span>
 &nbsp;·&nbsp;<i class="fi fi-clock"></i>1 分钟</span>
 </span><span class=meta-item>
 <span>
-&nbsp;·&nbsp;<i class="fi fi-chart"></i>37 字</span>
+&nbsp;·&nbsp;<i class="fi fi-word"></i>37 字</span>
 </span>
 <span class=meta-item>
 <span>
@@ -128,15 +122,14 @@
 </div>
 <footer class=entry-footer><span class=meta-item>
 <span>
-<i class="fi fi-calendar"></i>
-2022-10-1
+<i class="fi fi-calendar"></i>2022-10-1
 </span>
 </span><span class=meta-item>
 <span>
 &nbsp;·&nbsp;<i class="fi fi-clock"></i>1 分钟</span>
 </span><span class=meta-item>
 <span>
-&nbsp;·&nbsp;<i class="fi fi-chart"></i>470 字</span>
+&nbsp;·&nbsp;<i class="fi fi-word"></i>470 字</span>
 </span>
 <span class=meta-item>
 <span>
@@ -155,15 +148,14 @@
 </div>
 <footer class=entry-footer><span class=meta-item>
 <span>
-<i class="fi fi-calendar"></i>
-2022-10-1
+<i class="fi fi-calendar"></i>2022-10-1
 </span>
 </span><span class=meta-item>
 <span>
 &nbsp;·&nbsp;<i class="fi fi-clock"></i>2 分钟</span>
 </span><span class=meta-item>
 <span>
-&nbsp;·&nbsp;<i class="fi fi-chart"></i>623 字</span>
+&nbsp;·&nbsp;<i class="fi fi-word"></i>623 字</span>
 </span>
 <span class=meta-item>
 <span>
@@ -182,15 +174,14 @@
 </div>
 <footer class=entry-footer><span class=meta-item>
 <span>
-<i class="fi fi-calendar"></i>
-2022-10-2
+<i class="fi fi-calendar"></i>2022-10-2
 </span>
 </span><span class=meta-item>
 <span>
 &nbsp;·&nbsp;<i class="fi fi-clock"></i>1 分钟</span>
 </span><span class=meta-item>
 <span>
-&nbsp;·&nbsp;<i class="fi fi-chart"></i>399 字</span>
+&nbsp;·&nbsp;<i class="fi fi-word"></i>399 字</span>
 </span>
 <span class=meta-item>
 <span>
@@ -209,15 +200,14 @@
 </div>
 <footer class=entry-footer><span class=meta-item>
 <span>
-<i class="fi fi-calendar"></i>
-2022-10-2
+<i class="fi fi-calendar"></i>2022-10-2
 </span>
 </span><span class=meta-item>
 <span>
 &nbsp;·&nbsp;<i class="fi fi-clock"></i>0 分钟</span>
 </span><span class=meta-item>
 <span>
-&nbsp;·&nbsp;<i class="fi fi-chart"></i>0 字</span>
+&nbsp;·&nbsp;<i class="fi fi-word"></i>0 字</span>
 </span>
 <span class=meta-item>
 <span>
@@ -236,15 +226,14 @@
 </div>
 <footer class=entry-footer><span class=meta-item>
 <span>
-<i class="fi fi-calendar"></i>
-2022-10-8
+<i class="fi fi-calendar"></i>2022-10-8
 </span>
 </span><span class=meta-item>
 <span>
 &nbsp;·&nbsp;<i class="fi fi-clock"></i>2 分钟</span>
 </span><span class=meta-item>
 <span>
-&nbsp;·&nbsp;<i class="fi fi-chart"></i>831 字</span>
+&nbsp;·&nbsp;<i class="fi fi-word"></i>831 字</span>
 </span>
 <span class=meta-item>
 <span>
