deploy: df6ef67375773f8f05fccb5759a482a58be85df6

--- a/series/programming-kubernetes/index.html
+++ b/series/programming-kubernetes/index.html
@@ -6,12 +6,12 @@
 <meta name=robots content="index, follow">
 <title>Kubernetes 编程 | 博客 · 丁鹏</title>
 <meta name=keywords content>
-<meta name=description content="Kubernetes 编程 - 博客 · 丁鹏">
+<meta name=description content="本系列涉及 Kubernetes 开发相关的编程学习、实践等">
 <meta name=author content="丁鹏">
 <link rel=canonical href=https://srcio.cn/series/programming-kubernetes/>
 <meta name=baidu-site-verification content="code-yW1u8Rg4sz">
 <meta name=google-site-verification content="qnXhMaPNdhaZ4A36ptMVUn-0o111dAsJqugH_0ZCYvM">
-<link crossorigin=anonymous href=/assets/css/stylesheet.595134822be66a32ae1b1e14993b4adc68c5422f33bc7403aef30b553bdda2f2.css integrity="sha256-WVE0givmajKuGx4UmTtK3GjFQi8zvHQDrvMLVTvdovI=" rel="preload stylesheet" as=style>
+<link crossorigin=anonymous href=/assets/css/stylesheet.a05a54bbf1753764098135f15bdf53bbe8d2fb1a3bd1f2fdd1f237d7eeecb4f7.css integrity="sha256-oFpUu/F1N2QJgTXxW99Tu+jS+xo70fL90fI31+7stPc=" rel="preload stylesheet" as=style>
 <link rel=icon href=https://srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=16x16 href=https://srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=32x32 href=https://srcio.cn/images/blog.png>
@@ -23,13 +23,14 @@
 <noscript>
 <style>#theme-toggle,.top-link{display:none}</style>
 <style>@media(prefers-color-scheme:dark){:root{--theme:rgb(29, 30, 32);--entry:rgb(46, 46, 51);--primary:rgb(218, 218, 219);--secondary:rgb(155, 156, 157);--tertiary:rgb(65, 66, 68);--content:rgb(196, 196, 197);--hljs-bg:rgb(46, 46, 51);--code-bg:rgb(55, 56, 62);--border:rgb(51, 51, 51)}.list{background:var(--theme)}.list:not(.dark)::-webkit-scrollbar-track{background:0 0}.list:not(.dark)::-webkit-scrollbar-thumb{border-color:var(--theme)}}</style>
-</noscript><style>@media screen and (min-width:769px){.post-content input[type=checkbox]:checked~label>img{transform:scale(1.6);cursor:zoom-out;position:relative;z-index:999}.post-content img.zoomCheck{transition:transform .15s ease;z-index:999;cursor:zoom-in}}</style>
+</noscript>
 <script type=application/javascript>var doNotTrack=!1;doNotTrack||(function(a,e,f,g,b,c,d){a.GoogleAnalyticsObject=b,a[b]=a[b]||function(){(a[b].q=a[b].q||[]).push(arguments)},a[b].l=1*new Date,c=e.createElement(f),d=e.getElementsByTagName(f)[0],c.async=1,c.src=g,d.parentNode.insertBefore(c,d)}(window,document,'script','https://www.google-analytics.com/analytics.js','ga'),ga('create','UA-123-45','auto'),ga('send','pageview'))</script><meta property="og:title" content="Kubernetes 编程">
 <meta property="og:description" content="博客 · 丁鹏">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://srcio.cn/series/programming-kubernetes/"><meta property="og:image" content="https://srcio.cn/cover.png"><meta property="og:site_name" content="博客">
+<meta property="og:url" content="https://srcio.cn/series/programming-kubernetes/">
+<meta property="og:image" content="https://srcio.oss-cn-hangzhou.aliyuncs.com/images/kubernetes.svg"><meta property="og:site_name" content="博客">
 <meta name=twitter:card content="summary_large_image">
-<meta name=twitter:image content="https://srcio.cn/cover.png">
+<meta name=twitter:image content="https://srcio.oss-cn-hangzhou.aliyuncs.com/images/kubernetes.svg">
 <meta name=twitter:title content="Kubernetes 编程">
 <meta name=twitter:description content="博客 · 丁鹏">
 <script type=application/ld+json>{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"系列","item":"https://srcio.cn/series/"},{"@type":"ListItem","position":2,"name":"Kubernetes 编程","item":"https://srcio.cn/series/programming-kubernetes/"}]}</script>
@@ -78,6 +79,20 @@
 </span>
 </a>
 </li>
+<li>
+<span>|</span>
+</li>
+<li>
+<span>
+<a href=https://github.com/srcio target=_blank rel="noopener noreferrer me">
+<i class="fi fi-github"></i>
+</a>
+<span>·</span>
+<a href=mailto:me@srcio.cn target=_blank rel="noopener noreferrer me">
+<i class="fi fi-mail"></i>
+</a>
+</span>
+</li>
 </ul>
 </nav>
 </header><main class=main>
@@ -87,6 +102,7 @@
 </div>
 </header>
 <article class=post-entry>
+<div class=post-info>
 <header class=entry-header>
 <h2>CRD 简介
 </h2>
@@ -110,9 +126,11 @@
 &nbsp;·&nbsp;<i class="fi fi-user"></i>丁鹏
 </span>
 </span></footer>
+</div>
 <a class=entry-link aria-label="post link to CRD 简介" href=https://srcio.cn/series/programming-kubernetes/crd/></a>
 </article>
 <article class=post-entry>
+<div class=post-info>
 <header class=entry-header>
 <h2>构造 rest.Config 实例
 </h2>
@@ -136,9 +154,11 @@
 &nbsp;·&nbsp;<i class="fi fi-user"></i>丁鹏
 </span>
 </span></footer>
+</div>
 <a class=entry-link aria-label="post link to 构造 rest.Config 实例" href=https://srcio.cn/series/programming-kubernetes/rest-config/></a>
 </article>
 <article class=post-entry>
+<div class=post-info>
 <header class=entry-header>
 <h2>构造 Kubernetes 客户端实例
 </h2>
@@ -162,9 +182,11 @@
 &nbsp;·&nbsp;<i class="fi fi-user"></i>丁鹏
 </span>
 </span></footer>
+</div>
 <a class=entry-link aria-label="post link to 构造 Kubernetes 客户端实例" href=https://srcio.cn/series/programming-kubernetes/kube-client/></a>
 </article>
 <article class=post-entry>
+<div class=post-info>
 <header class=entry-header>
 <h2>Kubernetes API 设计
 </h2>
@@ -188,9 +210,11 @@
 &nbsp;·&nbsp;<i class="fi fi-user"></i>丁鹏
 </span>
 </span></footer>
+</div>
 <a class=entry-link aria-label="post link to Kubernetes API 设计" href=https://srcio.cn/series/programming-kubernetes/api-design/></a>
 </article>
 <article class=post-entry>
+<div class=post-info>
 <header class=entry-header>
 <h2>Kuberentes Operator
 </h2>
@@ -214,9 +238,11 @@
 &nbsp;·&nbsp;<i class="fi fi-user"></i>丁鹏
 </span>
 </span></footer>
+</div>
 <a class=entry-link aria-label="post link to Kuberentes Operator" href=https://srcio.cn/series/programming-kubernetes/operator/></a>
 </article>
 <article class=post-entry>
+<div class=post-info>
 <header class=entry-header>
 <h2>使用 client-gen 生成 clientset 代码
 </h2>
@@ -240,6 +266,7 @@
 &nbsp;·&nbsp;<i class="fi fi-user"></i>丁鹏
 </span>
 </span></footer>
+</div>
 <a class=entry-link aria-label="post link to 使用 client-gen 生成 clientset 代码" href=https://srcio.cn/series/programming-kubernetes/client-gen-usage/></a>
 </article>
 </main>
