--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link rel=canonical href=https://srcio.cn/>
 <meta name=baidu-site-verification content="code-yW1u8Rg4sz">
 <meta name=google-site-verification content="qnXhMaPNdhaZ4A36ptMVUn-0o111dAsJqugH_0ZCYvM">
-<link crossorigin=anonymous href=/assets/css/stylesheet.595134822be66a32ae1b1e14993b4adc68c5422f33bc7403aef30b553bdda2f2.css integrity="sha256-WVE0givmajKuGx4UmTtK3GjFQi8zvHQDrvMLVTvdovI=" rel="preload stylesheet" as=style>
+<link crossorigin=anonymous href=/assets/css/stylesheet.a05a54bbf1753764098135f15bdf53bbe8d2fb1a3bd1f2fdd1f237d7eeecb4f7.css integrity="sha256-oFpUu/F1N2QJgTXxW99Tu+jS+xo70fL90fI31+7stPc=" rel="preload stylesheet" as=style>
 <link rel=icon href=https://srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=16x16 href=https://srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=32x32 href=https://srcio.cn/images/blog.png>
@@ -25,7 +25,7 @@
 <noscript>
 <style>#theme-toggle,.top-link{display:none}</style>
 <style>@media(prefers-color-scheme:dark){:root{--theme:rgb(29, 30, 32);--entry:rgb(46, 46, 51);--primary:rgb(218, 218, 219);--secondary:rgb(155, 156, 157);--tertiary:rgb(65, 66, 68);--content:rgb(196, 196, 197);--hljs-bg:rgb(46, 46, 51);--code-bg:rgb(55, 56, 62);--border:rgb(51, 51, 51)}.list{background:var(--theme)}.list:not(.dark)::-webkit-scrollbar-track{background:0 0}.list:not(.dark)::-webkit-scrollbar-thumb{border-color:var(--theme)}}</style>
-</noscript><style>@media screen and (min-width:769px){.post-content input[type=checkbox]:checked~label>img{transform:scale(1.6);cursor:zoom-out;position:relative;z-index:999}.post-content img.zoomCheck{transition:transform .15s ease;z-index:999;cursor:zoom-in}}</style>
+</noscript>
 <script type=application/javascript>var doNotTrack=!1;doNotTrack||(function(a,e,f,g,b,c,d){a.GoogleAnalyticsObject=b,a[b]=a[b]||function(){(a[b].q=a[b].q||[]).push(arguments)},a[b].l=1*new Date,c=e.createElement(f),d=e.getElementsByTagName(f)[0],c.async=1,c.src=g,d.parentNode.insertBefore(c,d)}(window,document,'script','https://www.google-analytics.com/analytics.js','ga'),ga('create','UA-123-45','auto'),ga('send','pageview'))</script><meta property="og:title" content="博客 · 丁鹏">
 <meta property="og:description" content="博客 · 丁鹏">
 <meta property="og:type" content="website">
@@ -80,6 +80,20 @@
 </span>
 </a>
 </li>
+<li>
+<span>|</span>
+</li>
+<li>
+<span>
+<a href=https://github.com/srcio target=_blank rel="noopener noreferrer me">
+<i class="fi fi-github"></i>
+</a>
+<span>·</span>
+<a href=mailto:me@srcio.cn target=_blank rel="noopener noreferrer me">
+<i class="fi fi-mail"></i>
+</a>
+</span>
+</li>
 </ul>
 </nav>
 </header><main class=main>
@@ -97,6 +111,7 @@
 </div>
 </article>
 <article class=post-entry>
+<div class=post-info>
 <header class=entry-header>
 <h2>Go 错误处理
 </h2>
@@ -120,9 +135,11 @@
 &nbsp;·&nbsp;<i class="fi fi-user"></i>丁鹏
 </span>
 </span></footer>
+</div>
 <a class=entry-link aria-label="post link to Go 错误处理" href=https://srcio.cn/series/programming-go/gopkg-errors/></a>
 </article>
 <article class=post-entry>
+<div class=post-info>
 <header class=entry-header>
 <h2>数组递归构造具有父子层级关系的对象
 </h2>
@@ -146,9 +163,11 @@
 &nbsp;·&nbsp;<i class="fi fi-user"></i>丁鹏
 </span>
 </span></footer>
+</div>
 <a class=entry-link aria-label="post link to 数组递归构造具有父子层级关系的对象" href=https://srcio.cn/series/programming-go/menu-recursive/></a>
 </article>
 <article class=post-entry>
+<div class=post-info>
 <header class=entry-header>
 <h2>K8s 集群规划之节点资源配置
 </h2>
@@ -172,9 +191,13 @@
 &nbsp;·&nbsp;<i class="fi fi-user"></i>丁鹏
 </span>
 </span></footer>
+</div>
+<figure class=entry-cover><img loading=lazy src=https://srcio.oss-cn-hangzhou.aliyuncs.com/images/cluster-design.svg alt>
+</figure>
 <a class=entry-link aria-label="post link to K8s 集群规划之节点资源配置" href=https://srcio.cn/posts/k8s-node-resource-config/></a>
 </article>
 <article class=post-entry>
+<div class=post-info>
 <header class=entry-header>
 <h2>Kubelet 垃圾回收原理剖析
 </h2>
@@ -198,9 +221,11 @@
 &nbsp;·&nbsp;<i class="fi fi-user"></i>丁鹏
 </span>
 </span></footer>
+</div>
 <a class=entry-link aria-label="post link to Kubelet 垃圾回收原理剖析" href=https://srcio.cn/posts/kubelet-recycle-policy/></a>
 </article>
 <article class=post-entry>
+<div class=post-info>
 <header class=entry-header>
 <h2>CRD 简介
 </h2>
@@ -224,9 +249,11 @@
 &nbsp;·&nbsp;<i class="fi fi-user"></i>丁鹏
 </span>
 </span></footer>
+</div>
 <a class=entry-link aria-label="post link to CRD 简介" href=https://srcio.cn/series/programming-kubernetes/crd/></a>
 </article>
 <article class=post-entry>
+<div class=post-info>
 <header class=entry-header>
 <h2>Golang 切片扩容
 </h2>
@@ -250,9 +277,11 @@
 &nbsp;·&nbsp;<i class="fi fi-user"></i>丁鹏
 </span>
 </span></footer>
+</div>
 <a class=entry-link aria-label="post link to Golang 切片扩容" href=https://srcio.cn/series/programming-go/slice-append/></a>
 </article>
 <article class=post-entry>
+<div class=post-info>
 <header class=entry-header>
 <h2>Docker Compose 实践
 </h2>
@@ -276,9 +305,11 @@
 &nbsp;·&nbsp;<i class="fi fi-user"></i>丁鹏
 </span>
 </span></footer>
+</div>
 <a class=entry-link aria-label="post link to Docker Compose 实践" href=https://srcio.cn/posts/docker-compose/></a>
 </article>
 <article class=post-entry>
+<div class=post-info>
 <header class=entry-header>
 <h2>Golang 生成证书
 </h2>
@@ -302,9 +333,11 @@
 &nbsp;·&nbsp;<i class="fi fi-user"></i>丁鹏
 </span>
 </span></footer>
+</div>
 <a class=entry-link aria-label="post link to Golang 生成证书" href=https://srcio.cn/series/programming-go/gen-cert/></a>
 </article>
 <article class=post-entry>
+<div class=post-info>
 <header class=entry-header>
 <h2>Golang 实现双向认证
 </h2>
@@ -328,9 +361,11 @@
 &nbsp;·&nbsp;<i class="fi fi-user"></i>丁鹏
 </span>
 </span></footer>
+</div>
 <a class=entry-link aria-label="post link to Golang 实现双向认证" href=https://srcio.cn/series/programming-go/mtls/></a>
 </article>
 <article class=post-entry>
+<div class=post-info>
 <header class=entry-header>
 <h2>构造 rest.Config 实例
 </h2>
@@ -354,6 +389,7 @@
 &nbsp;·&nbsp;<i class="fi fi-user"></i>丁鹏
 </span>
 </span></footer>
+</div>
 <a class=entry-link aria-label="post link to 构造 rest.Config 实例" href=https://srcio.cn/series/programming-kubernetes/rest-config/></a>
 </article>
 <footer class=page-footer>
