deploy: 67b443926063fbe9ace02b1984c0cee210f76098

--- a/series/programming-go/gopkg-errors/index.html
+++ b/series/programming-go/gopkg-errors/index.html
@@ -11,7 +11,7 @@
 <link rel=canonical href=https://srcio.cn/series/programming-go/gopkg-errors/>
 <meta name=baidu-site-verification content="code-yW1u8Rg4sz">
 <meta name=google-site-verification content="qnXhMaPNdhaZ4A36ptMVUn-0o111dAsJqugH_0ZCYvM">
-<link crossorigin=anonymous href=/assets/css/stylesheet.2bdad68ae6ceb84e1ce466923e48055436e9d0d49eadba38aa07759d0662cf2a.css integrity="sha256-K9rWiubOuE4c5GaSPkgFVDbp0NSerbo4qgd1nQZizyo=" rel="preload stylesheet" as=style>
+<link crossorigin=anonymous href=/assets/css/stylesheet.dc404aa848250110001440f23b45bf82f83ba3cdee45dafe7694f33cd49c8b5d.css integrity="sha256-3EBKqEglARAAFEDyO0W/gvg7o83uRdr+dpTzPNSci10=" rel="preload stylesheet" as=style>
 <script defer crossorigin=anonymous src=/assets/js/highlight.f413e19d0714851f6474e7ee9632408e58ac146fbdbe62747134bea2fa3415e0.js integrity="sha256-9BPhnQcUhR9kdOfuljJAjlisFG+9vmJ0cTS+ovo0FeA=" onload=hljs.initHighlightingOnLoad()></script>
 <link rel=icon href=https://srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=16x16 href=https://srcio.cn/images/blog.png>
@@ -174,6 +174,9 @@ Go 错误处理
 <li><a href=https://srcio.cn/tags/golang/><i class="fi fi-tag"></i>&nbsp;Golang</a></li>
 </ul>
 <nav class=paginav>
+<a class=prev href=https://srcio.cn/series/programming-go/go-solid/>
+<strong class=title><i class="fi fi-backward"></i>&nbsp;上一页</strong>
+<br>Golang 程序 SOLID 设计原则</a>
 <a class=next href=https://srcio.cn/series/programming-go/menu-recursive/>
 <strong class=title>下一页&nbsp;<i class="fi fi-forward"></i></strong>
 <br>数组递归构造具有父子层级关系的对象</a>
