--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link rel=canonical href=https://srcio.cn/>
 <meta name=baidu-site-verification content="code-yW1u8Rg4sz">
 <meta name=google-site-verification content="qnXhMaPNdhaZ4A36ptMVUn-0o111dAsJqugH_0ZCYvM">
-<link crossorigin=anonymous href=/assets/css/stylesheet.2bdad68ae6ceb84e1ce466923e48055436e9d0d49eadba38aa07759d0662cf2a.css integrity="sha256-K9rWiubOuE4c5GaSPkgFVDbp0NSerbo4qgd1nQZizyo=" rel="preload stylesheet" as=style>
+<link crossorigin=anonymous href=/assets/css/stylesheet.dc404aa848250110001440f23b45bf82f83ba3cdee45dafe7694f33cd49c8b5d.css integrity="sha256-3EBKqEglARAAFEDyO0W/gvg7o83uRdr+dpTzPNSci10=" rel="preload stylesheet" as=style>
 <link rel=icon href=https://srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=16x16 href=https://srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=32x32 href=https://srcio.cn/images/blog.png>
@@ -109,6 +109,34 @@
 </a>
 </p>
 </div>
+</article>
+<article class=post-entry>
+<div class=post-info>
+<header class=entry-header>
+<h2>Golang 程序 SOLID 设计原则
+</h2>
+</header>
+<div class=entry-content>
+<p>可重用软件设计的五个原则，SOLID 原则： 单一职责原则（Single Responsibility Principle） 开放 / 封闭原则（Open / Closed Principle） 里...</p>
+</div>
+<footer class=entry-footer><span class=meta-item>
+<span>
+<i class="fi fi-calendar"></i>2022-10-25
+</span>
+</span><span class=meta-item>
+<span>
+&nbsp;·&nbsp;<i class="fi fi-clock"></i>9 分钟</span>
+</span><span class=meta-item>
+<span>
+&nbsp;·&nbsp;<i class="fi fi-word"></i>4428 字</span>
+</span>
+<span class=meta-item>
+<span>
+&nbsp;·&nbsp;<i class="fi fi-user"></i>丁鹏
+</span>
+</span></footer>
+</div>
+<a class=entry-link aria-label="post link to Golang 程序 SOLID 设计原则" href=https://srcio.cn/series/programming-go/go-solid/></a>
 </article>
 <article class=post-entry>
 <div class=post-info>
@@ -361,34 +389,6 @@
 </span></footer>
 </div>
 <a class=entry-link aria-label="post link to Golang 实现双向认证" href=https://srcio.cn/series/programming-go/mtls/></a>
-</article>
-<article class=post-entry>
-<div class=post-info>
-<header class=entry-header>
-<h2>构造 rest.Config 实例
-</h2>
-</header>
-<div class=entry-content>
-<p>本节介绍几种构造 rest.Config 实例的场景或者方法。 rest.Config 可以帮助我们构建各种类型的 Kubernetes 客户端实例，从而访问 Kubernetes APIServer。 通过 kubeconfig 文件构造 程序通过读取 kubeconfig 文...</p>
-</div>
-<footer class=entry-footer><span class=meta-item>
-<span>
-<i class="fi fi-calendar"></i>2022-10-1
-</span>
-</span><span class=meta-item>
-<span>
-&nbsp;·&nbsp;<i class="fi fi-clock"></i>1 分钟</span>
-</span><span class=meta-item>
-<span>
-&nbsp;·&nbsp;<i class="fi fi-word"></i>470 字</span>
-</span>
-<span class=meta-item>
-<span>
-&nbsp;·&nbsp;<i class="fi fi-user"></i>丁鹏
-</span>
-</span></footer>
-</div>
-<a class=entry-link aria-label="post link to 构造 rest.Config 实例" href=https://srcio.cn/series/programming-kubernetes/rest-config/></a>
 </article>
 <footer class=page-footer>
 <nav class=pagination>
