deploy: c6cc3bc08cfc53e1a5ff9c87d4382669f83524e7

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link rel=canonical href=https://srcio.cn/>
 <meta name=baidu-site-verification content="code-yW1u8Rg4sz">
 <meta name=google-site-verification content="qnXhMaPNdhaZ4A36ptMVUn-0o111dAsJqugH_0ZCYvM">
-<link crossorigin=anonymous href=/assets/css/stylesheet.dc404aa848250110001440f23b45bf82f83ba3cdee45dafe7694f33cd49c8b5d.css integrity="sha256-3EBKqEglARAAFEDyO0W/gvg7o83uRdr+dpTzPNSci10=" rel="preload stylesheet" as=style>
+<link crossorigin=anonymous href=/assets/css/stylesheet.e885a03929d345922e032bc3e661c94c00cedb52c10d75afe2642bd4071375a8.css integrity="sha256-6IWgOSnTRZIuAyvD5mHJTADO21LBDXWv4mQr1AcTdag=" rel="preload stylesheet" as=style>
 <link rel=icon href=https://srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=16x16 href=https://srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=32x32 href=https://srcio.cn/images/blog.png>
@@ -128,7 +128,7 @@
 &nbsp;·&nbsp;<i class="fi fi-clock"></i>9 分钟</span>
 </span><span class=meta-item>
 <span>
-&nbsp;·&nbsp;<i class="fi fi-word"></i>4428 字</span>
+&nbsp;·&nbsp;<i class="fi fi-word"></i>4418 字</span>
 </span>
 <span class=meta-item>
 <span>
@@ -136,12 +136,14 @@
 </span>
 </span></footer>
 </div>
+<figure class=entry-cover><img loading=lazy src=https://srcio.oss-cn-hangzhou.aliyuncs.com/images/20221031154811.png alt>
+</figure>
 <a class=entry-link aria-label="post link to Golang 程序 SOLID 设计原则" href=https://srcio.cn/series/programming-go/go-solid/></a>
 </article>
 <article class=post-entry>
 <div class=post-info>
 <header class=entry-header>
-<h2>Go 错误处理
+<h2>Go 包 - errors
 </h2>
 </header>
 <div class=entry-content>
@@ -164,7 +166,7 @@
 </span>
 </span></footer>
 </div>
-<a class=entry-link aria-label="post link to Go 错误处理" href=https://srcio.cn/series/programming-go/gopkg-errors/></a>
+<a class=entry-link aria-label="post link to Go 包 - errors" href=https://srcio.cn/series/programming-go/gopkg-errors/></a>
 </article>
 <article class=post-entry>
 <div class=post-info>
@@ -345,7 +347,7 @@
 </div>
 <footer class=entry-footer><span class=meta-item>
 <span>
-<i class="fi fi-calendar"></i>2022-10-8
+<i class="fi fi-calendar"></i>2022-10-08
 </span>
 </span><span class=meta-item>
 <span>
@@ -373,7 +375,7 @@
 </div>
 <footer class=entry-footer><span class=meta-item>
 <span>
-<i class="fi fi-calendar"></i>2022-10-2
+<i class="fi fi-calendar"></i>2022-10-02
 </span>
 </span><span class=meta-item>
 <span>
