--- a/series/programming-kubernetes/api-design/index.html
+++ b/series/programming-kubernetes/api-design/index.html
@@ -11,7 +11,7 @@
 <link rel=canonical href=https://srcio.cn/series/programming-kubernetes/api-design/>
 <meta name=baidu-site-verification content="code-yW1u8Rg4sz">
 <meta name=google-site-verification content="qnXhMaPNdhaZ4A36ptMVUn-0o111dAsJqugH_0ZCYvM">
-<link crossorigin=anonymous href=/assets/css/stylesheet.dc404aa848250110001440f23b45bf82f83ba3cdee45dafe7694f33cd49c8b5d.css integrity="sha256-3EBKqEglARAAFEDyO0W/gvg7o83uRdr+dpTzPNSci10=" rel="preload stylesheet" as=style>
+<link crossorigin=anonymous href=/assets/css/stylesheet.e885a03929d345922e032bc3e661c94c00cedb52c10d75afe2642bd4071375a8.css integrity="sha256-6IWgOSnTRZIuAyvD5mHJTADO21LBDXWv4mQr1AcTdag=" rel="preload stylesheet" as=style>
 <script defer crossorigin=anonymous src=/assets/js/highlight.f413e19d0714851f6474e7ee9632408e58ac146fbdbe62747134bea2fa3415e0.js integrity="sha256-9BPhnQcUhR9kdOfuljJAjlisFG+9vmJ0cTS+ovo0FeA=" onload=hljs.initHighlightingOnLoad()></script>
 <link rel=icon href=https://srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=16x16 href=https://srcio.cn/images/blog.png>
@@ -58,7 +58,7 @@
 </li>
 <li>
 <a href=https://srcio.cn/series/ title=系列>
-<span>
+<span class=active>
 <i class="fi fi-series"></i>&nbsp;系列</span>
 </a>
 </li>
@@ -110,7 +110,7 @@ Kubernetes API 设计
 </h1>
 <div class=post-meta><span class=meta-item>
 <span>
-<i class="fi fi-calendar"></i>2022-10-2
+<i class="fi fi-calendar"></i>2022-10-02
 </span>
 </span><span class=meta-item>
 <span>
@@ -181,11 +181,6 @@ Kubernetes API 设计
 </div>
 <div class=post-right-toc><div class=toc>
 <div open>
-<div class=inner>
-<ul class=toc-title>
-<li><a href=#top>&nbsp;标题</a></li>
-</ul>
-</div>
 <div class=inner><ul>
 <li>
 <a href=#%e6%9c%af%e8%af%ad aria-label=术语>术语</a>
@@ -194,7 +189,7 @@ Kubernetes API 设计
 </div>
 </div>
 </div>
-<script>let activeElement,elements;window.addEventListener('DOMContentLoaded',function(b){elements=document.querySelectorAll('h1[id],h2[id],h3[id],h4[id],h5[id],h6[id]'),activeElement=elements[0];const a=encodeURI(activeElement.getAttribute('id')).toLowerCase();document.querySelector(`.inner ul li a[href="#${a}"]`).classList.add('active')},!1),window.addEventListener('scroll',()=>{activeElement=Array.from(elements).find(a=>{if(getOffsetTop(a)-window.pageYOffset>0&&getOffsetTop(a)-window.pageYOffset<window.innerHeight/2)return a})||activeElement,elements.forEach(a=>{const b=encodeURI(a.getAttribute('id')).toLowerCase();a===activeElement?document.querySelector(`.inner ul li a[href="#${b}"]`)?.classList.add('active'):document.querySelector(`.inner ul li a[href="#${b}"]`)?.classList.remove('active')})},!1);function getOffsetTop(a){if(!a.getClientRects().length)return 0;let b=a.getBoundingClientRect(),c=a.ownerDocument.defaultView;return b.top+c.pageYOffset}</script>
+<script>let activeElement,elements;window.addEventListener('DOMContentLoaded',function(b){elements=document.querySelectorAll('h1[id],h2[id],h3[id],h4[id]'),activeElement=elements[0];const a=encodeURI(activeElement.getAttribute('id')).toLowerCase();document.querySelector(`.inner ul li a[href="#${a}"]`).classList.add('active')},!1),window.addEventListener('scroll',()=>{activeElement=Array.from(elements).find(a=>{if(getOffsetTop(a)-window.pageYOffset>0&&getOffsetTop(a)-window.pageYOffset<window.innerHeight/2)return a})||activeElement,elements.forEach(a=>{const b=encodeURI(a.getAttribute('id')).toLowerCase();a===activeElement?document.querySelector(`.inner ul li a[href="#${b}"]`)?.classList.add('active'):document.querySelector(`.inner ul li a[href="#${b}"]`)?.classList.remove('active')})},!1);function getOffsetTop(a){if(!a.getClientRects().length)return 0;let b=a.getBoundingClientRect(),c=a.ownerDocument.defaultView;return b.top+c.pageYOffset}</script>
 </div>
 <div class=clear_float></div>
 </article>
