--- a/series/programming-kubernetes/client-gen-usage/index.html
+++ b/series/programming-kubernetes/client-gen-usage/index.html
@@ -11,7 +11,7 @@
 <link rel=canonical href=https://srcio.cn/series/programming-kubernetes/client-gen-usage/>
 <meta name=baidu-site-verification content="code-yW1u8Rg4sz">
 <meta name=google-site-verification content="qnXhMaPNdhaZ4A36ptMVUn-0o111dAsJqugH_0ZCYvM">
-<link crossorigin=anonymous href=/assets/css/stylesheet.dc404aa848250110001440f23b45bf82f83ba3cdee45dafe7694f33cd49c8b5d.css integrity="sha256-3EBKqEglARAAFEDyO0W/gvg7o83uRdr+dpTzPNSci10=" rel="preload stylesheet" as=style>
+<link crossorigin=anonymous href=/assets/css/stylesheet.e885a03929d345922e032bc3e661c94c00cedb52c10d75afe2642bd4071375a8.css integrity="sha256-6IWgOSnTRZIuAyvD5mHJTADO21LBDXWv4mQr1AcTdag=" rel="preload stylesheet" as=style>
 <script defer crossorigin=anonymous src=/assets/js/highlight.f413e19d0714851f6474e7ee9632408e58ac146fbdbe62747134bea2fa3415e0.js integrity="sha256-9BPhnQcUhR9kdOfuljJAjlisFG+9vmJ0cTS+ovo0FeA=" onload=hljs.initHighlightingOnLoad()></script>
 <link rel=icon href=https://srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=16x16 href=https://srcio.cn/images/blog.png>
@@ -58,7 +58,7 @@
 </li>
 <li>
 <a href=https://srcio.cn/series/ title=系列>
-<span>
+<span class=active>
 <i class="fi fi-series"></i>&nbsp;系列</span>
 </a>
 </li>
@@ -110,7 +110,7 @@
 </h1>
 <div class=post-meta><span class=meta-item>
 <span>
-<i class="fi fi-calendar"></i>2022-10-8
+<i class="fi fi-calendar"></i>2022-10-08
 </span>
 </span><span class=meta-item>
 <span>
