deploy: 2a0310e968e05a6a57fa0fe088837a894eac449b

--- a/series/programming-go/gopkg-errors/index.html
+++ b/series/programming-go/gopkg-errors/index.html
@@ -102,7 +102,7 @@
 <div class=post-left-article>
 <header class=post-header>
 <div class=breadcrumbs><p>
-<span><a href=/><i class="fi fi-home"></i>&nbsp;主页</a></span><span><a href=https://srcio.cn/series/><i class="fi fi-angle-right"></i>系列</a></span><span><a href=https://srcio.cn/series/programming-go/><i class="fi fi-angle-right"></i>Golang 编程</a></span><span><i class="fi fi-angle-right"></i>Go 包 - errors</span>
+<span><a href=/><i class="fi fi-home"></i>&nbsp;主页</a></span><span><i class="fi fi-angle-right"></i><a href=https://srcio.cn/series/>系列</a></span><span><i class="fi fi-angle-right"></i><a href=https://srcio.cn/series/programming-go/>Golang 编程</a></span><i class="fi fi-angle-right"></i><span>Go 包 - errors</span>
 </p>
 </div>
 <h1 id=post-title class=post-title>
