--- a/series/index.html
+++ b/series/index.html
@@ -96,7 +96,7 @@
 </nav>
 </header><main class=main>
 <header class=page-header><div class=breadcrumbs><p>
-<span><a href=/><i class="fi fi-home"></i>&nbsp;主页</a></span><span><i class="fi fi-angle-right"></i>系列</span>
+<span><a href=/><i class="fi fi-home"></i>&nbsp;主页</a></span><i class="fi fi-angle-right"></i><span>系列</span>
 </p>
 </div>
 </header>
