--- a/series/programming-go/go-solid/index.html
+++ b/series/programming-go/go-solid/index.html
@@ -103,7 +103,7 @@
 <div class=post-left-article>
 <header class=post-header>
 <div class=breadcrumbs><p>
-<span><a href=/><i class="fi fi-home"></i>&nbsp;主页</a></span><span><a href=https://srcio.cn/series/><i class="fi fi-angle-right"></i>系列</a></span><span><a href=https://srcio.cn/series/programming-go/><i class="fi fi-angle-right"></i>Golang 编程</a></span><span><i class="fi fi-angle-right"></i>Golang 程序 SOLID 设计原则</span>
+<span><a href=/><i class="fi fi-home"></i>&nbsp;主页</a></span><span><i class="fi fi-angle-right"></i><a href=https://srcio.cn/series/>系列</a></span><span><i class="fi fi-angle-right"></i><a href=https://srcio.cn/series/programming-go/>Golang 编程</a></span><i class="fi fi-angle-right"></i><span>Golang 程序 SOLID 设计原则</span>
 </p>
 </div>
 <h1 id=post-title class=post-title>
