--- a/series/programming-kubernetes/crd/index.html
+++ b/series/programming-kubernetes/crd/index.html
@@ -102,7 +102,7 @@
 <div class=post-left-article>
 <header class=post-header>
 <div class=breadcrumbs><p>
-<span><a href=/><i class="fi fi-home"></i>&nbsp;主页</a></span><span><a href=https://srcio.cn/series/><i class="fi fi-angle-right"></i>系列</a></span><span><a href=https://srcio.cn/series/programming-kubernetes/><i class="fi fi-angle-right"></i>Kubernetes 编程</a></span><span><i class="fi fi-angle-right"></i>CRD 简介</span>
+<span><a href=/><i class="fi fi-home"></i>&nbsp;主页</a></span><span><i class="fi fi-angle-right"></i><a href=https://srcio.cn/series/>系列</a></span><span><i class="fi fi-angle-right"></i><a href=https://srcio.cn/series/programming-kubernetes/>Kubernetes 编程</a></span><i class="fi fi-angle-right"></i><span>CRD 简介</span>
 </p>
 </div>
 <h1 id=post-title class=post-title>
