--- a/series/programming-kubernetes/index.html
+++ b/series/programming-kubernetes/index.html
@@ -97,7 +97,7 @@
 </nav>
 </header><main class=main>
 <header class=page-header><div class=breadcrumbs><p>
-<span><a href=/><i class="fi fi-home"></i>&nbsp;主页</a></span><span><a href=https://srcio.cn/series/><i class="fi fi-angle-right"></i>系列</a></span><span><i class="fi fi-angle-right"></i>Kubernetes 编程</span>
+<span><a href=/><i class="fi fi-home"></i>&nbsp;主页</a></span><span><i class="fi fi-angle-right"></i><a href=https://srcio.cn/series/>系列</a></span><i class="fi fi-angle-right"></i><span>Kubernetes 编程</span>
 </p>
 </div>
 </header>
