deploy: db98fba9f0ef4bb24ccda7f8622de347deb7af16

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 </div>
 <figure class=entry-cover><img loading=lazy src=https://srcio.oss-cn-hangzhou.aliyuncs.com/images/20221031154811.png alt>
 </figure>
-<a class=entry-link aria-label="post link to Golang 程序 SOLID 设计原则" href=https://srcio.cn/series/programming-go/go-solid/></a>
+<a class=entry-link aria-label="post link to Golang 程序 SOLID 设计原则" href=https://srcio.cn/series/programming-go/golang-%E7%A8%8B%E5%BA%8F-solid-%E8%AE%BE%E8%AE%A1%E5%8E%9F%E5%88%99/></a>
 </article>
 <article class=post-entry>
 <div class=post-info>
@@ -194,7 +194,7 @@
 </span>
 </span></footer>
 </div>
-<a class=entry-link aria-label="post link to 数组递归构造具有父子层级关系的对象" href=https://srcio.cn/series/programming-go/menu-recursive/></a>
+<a class=entry-link aria-label="post link to 数组递归构造具有父子层级关系的对象" href=https://srcio.cn/series/programming-go/%E6%95%B0%E7%BB%84%E9%80%92%E5%BD%92%E6%9E%84%E9%80%A0%E5%85%B7%E6%9C%89%E7%88%B6%E5%AD%90%E5%B1%82%E7%BA%A7%E5%85%B3%E7%B3%BB%E7%9A%84%E5%AF%B9%E8%B1%A1/></a>
 </article>
 <article class=post-entry>
 <div class=post-info>
@@ -306,7 +306,7 @@
 </span>
 </span></footer>
 </div>
-<a class=entry-link aria-label="post link to Golang 切片扩容" href=https://srcio.cn/series/programming-go/slice-append/></a>
+<a class=entry-link aria-label="post link to Golang 切片扩容" href=https://srcio.cn/series/programming-go/golang-%E5%88%87%E7%89%87%E6%89%A9%E5%AE%B9/></a>
 </article>
 <article class=post-entry>
 <div class=post-info>
@@ -362,7 +362,7 @@
 </span>
 </span></footer>
 </div>
-<a class=entry-link aria-label="post link to Golang 生成证书" href=https://srcio.cn/series/programming-go/gen-cert/></a>
+<a class=entry-link aria-label="post link to Golang 生成证书" href=https://srcio.cn/series/programming-go/golang-%E7%94%9F%E6%88%90%E8%AF%81%E4%B9%A6/></a>
 </article>
 <article class=post-entry>
 <div class=post-info>
@@ -390,7 +390,7 @@
 </span>
 </span></footer>
 </div>
-<a class=entry-link aria-label="post link to Golang 实现双向认证" href=https://srcio.cn/series/programming-go/mtls/></a>
+<a class=entry-link aria-label="post link to Golang 实现双向认证" href=https://srcio.cn/series/programming-go/golang-%E5%AE%9E%E7%8E%B0%E5%8F%8C%E5%90%91%E8%AE%A4%E8%AF%81/></a>
 </article>
 <footer class=page-footer>
 <nav class=pagination>
