--- a/series/programming-kubernetes/client-gen-usage/index.html
+++ b/series/programming-kubernetes/client-gen-usage/index.html
@@ -167,6 +167,9 @@
 <a class=prev href=https://srcio.cn/series/programming-kubernetes/operator/>
 <strong class=title><i class="fi fi-backward"></i>&nbsp;上一页</strong>
 <br>Kuberentes Operator</a>
+<a class=next href=https://srcio.cn/posts/acme-%E5%B7%A5%E4%BD%9C%E5%8E%9F%E7%90%86/>
+<strong class=title>下一页&nbsp;<i class="fi fi-forward"></i></strong>
+<br>ACME 工作原理</a>
 </nav>
 </footer>
 <div class=giscus_comments><script src=https://giscus.app/client.js data-repo=srcio/blog data-repo-id=R_kgDOIFWX7A data-category=General data-category-id=DIC_kwDOIFWX7M4CRrSg data-mapping=pathname data-strict=0 data-reactions-enabled=1 data-emit-metadata=0 data-input-position=top data-theme=light data-lang=zh-CN crossorigin=anonymous async></script>
