--- a/series/programming-kubernetes/crd/index.html
+++ b/series/programming-kubernetes/crd/index.html
@@ -198,7 +198,7 @@ CRD 简介
 <a class=prev href=https://srcio.cn/posts/kubelet-recycle-policy/>
 <strong class=title><i class="fi fi-backward"></i>&nbsp;上一页</strong>
 <br>Kubelet 垃圾回收原理剖析</a>
-<a class=next href=https://srcio.cn/series/programming-go/slice-append/>
+<a class=next href=https://srcio.cn/series/programming-go/golang-%E5%88%87%E7%89%87%E6%89%A9%E5%AE%B9/>
 <strong class=title>下一页&nbsp;<i class="fi fi-forward"></i></strong>
 <br>Golang 切片扩容</a>
 </nav>
