--- a/series/programming-go/gopkg-errors/index.html
+++ b/series/programming-go/gopkg-errors/index.html
@@ -175,10 +175,10 @@ Go 包 - errors
 <li><a href=https://srcio.cn/tags/gopkg/><i class="fi fi-tag"></i>&nbsp;gopkg</a></li>
 </ul>
 <nav class=paginav>
-<a class=prev href=https://srcio.cn/series/programming-go/go-solid/>
+<a class=prev href=https://srcio.cn/series/programming-go/golang-%E7%A8%8B%E5%BA%8F-solid-%E8%AE%BE%E8%AE%A1%E5%8E%9F%E5%88%99/>
 <strong class=title><i class="fi fi-backward"></i>&nbsp;上一页</strong>
 <br>Golang 程序 SOLID 设计原则</a>
-<a class=next href=https://srcio.cn/series/programming-go/menu-recursive/>
+<a class=next href=https://srcio.cn/series/programming-go/%E6%95%B0%E7%BB%84%E9%80%92%E5%BD%92%E6%9E%84%E9%80%A0%E5%85%B7%E6%9C%89%E7%88%B6%E5%AD%90%E5%B1%82%E7%BA%A7%E5%85%B3%E7%B3%BB%E7%9A%84%E5%AF%B9%E8%B1%A1/>
 <strong class=title>下一页&nbsp;<i class="fi fi-forward"></i></strong>
 <br>数组递归构造具有父子层级关系的对象</a>
 </nav>
