--- a/series/programming-kubernetes/rest-config/index.html
+++ b/series/programming-kubernetes/rest-config/index.html
@@ -243,10 +243,10 @@
 <li><a href=https://srcio.cn/tags/kubernetes/><i class="fi fi-tag"></i>&nbsp;Kubernetes</a></li>
 </ul>
 <nav class=paginav>
-<a class=prev href=https://srcio.cn/series/programming-go/mtls/>
+<a class=prev href=https://srcio.cn/series/programming-go/golang-%E5%AE%9E%E7%8E%B0%E5%8F%8C%E5%90%91%E8%AE%A4%E8%AF%81/>
 <strong class=title><i class="fi fi-backward"></i>&nbsp;上一页</strong>
 <br>Golang 实现双向认证</a>
-<a class=next href=https://srcio.cn/series/programming-go/go-work/>
+<a class=next href=https://srcio.cn/series/programming-go/go1.18-%E5%B7%A5%E4%BD%9C%E5%8C%BA%E6%A8%A1%E5%BC%8F/>
 <strong class=title>下一页&nbsp;<i class="fi fi-forward"></i></strong>
 <br>Go1.18 - 工作区模式</a>
 </nav>
